Bikes & More Final Commit

--- a/shop.html
+++ b/shop.html
@@ -202,24 +202,36 @@
     <div class="container">
         <div class="row">
             <div class="column">
-                <img src="images/Kids.png" alt="Kids Bikes" style="width:100%">
+                <a href="#kids">
+                    <img src="images/kids.jpg" alt="Kids Bikes" style="width:100%">
+                </a>
             </div>
             <div class="column">
-                <img src="images/city.png" alt="City Bikes" style="width:100%" id="city">
+                <a href="#city">
+                    <img src="images/city.jpg" alt="City Bikes" style="width:100%">
+                </a>
             </div>
             <div class="column">
-                <img src="images/cross.png" alt="Cross Bikes" style="width:100%">
+                <a href="#cross">
+                    <img src="images/cross.jpg" alt="Cross Bikes" style="width:100%">
+                </a>
             </div>
         </div>
         <div class="row">
             <div class="column">
-                <img src="images/Road.png" alt="Road Bikes" style="width:100%">
+                <a href="#road">
+                    <img src="images/road.jpg" alt="Road Bikes" style="width:100%">
+                </a>
             </div>
             <div class="column">
-                <img src="images/Folding.png" alt="Folding Bikes" style="width:100%">
+                <a href="#folding">
+                    <img src="images/folding.jpg" alt="Folding Bikes" style="width:100%">
+                </a>
             </div>
             <div class="column">
-                <img src="images/E-Bike.png" alt="E-Bikes" style="width:100%">
+                <a href="#ebike">
+                    <img src="images/e-bike.jpg" alt="E-Bikes" style="width:100%">
+                </a>
             </div>
         </div>
 
@@ -229,7 +241,7 @@
         <div class="row">
             <h1>Our Bikes</h1>
             <hr>
-            <div class="row">
+            <div class="row" id="city">
                 <div class="col-md-6 col-sm-6">
                     <div class="product-grid6">
                         <div class="product-image6" id="city2812-light">
@@ -254,7 +266,7 @@
                     <div class="product-grid6">
                         <div class="product-image6">
                             <a target="_blank" href="https://devroneurope.it/project/kreativ-2813/">
-                                <img class="pic-1" src="images/cityK-2813_2019-grey-7360x3680.jpg">
+                                <img class="pic-1" img src="images/cityman.jpg">
                             </a>
                         </div>
                         <div class="product-content">
@@ -271,7 +283,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="folding">
                 <div class="col-md-6 col-sm-6">
                     <div class="product-grid6">
                         <div class="product-image6" id="folding-unisex2">
@@ -312,7 +324,7 @@
                 </div>
 
             </div>
-            <div class="row">
+            <div class="row" id="cross">
                 <div class="col-md-6 col-sm-6">
                     <div class="product-grid6">
                         <div class="product-image6" id="cross-woman">
@@ -354,7 +366,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="ebike">
                 <div class="col-md-6 col-sm-6">
                     <div class="product-grid6">
                         <div class="product-image6">
@@ -396,7 +408,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="road">
                 <div class="col-md-6 col-sm-6">
                     <div class="product-grid6">
                         <div class="product-image6">
@@ -438,7 +450,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="kids">
                 <div class="col-md-6 col-sm-6">
                     <div class="product-grid6">
                         <div class="product-image6" id="kid-girl-bike">
