--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/caroussel-3.png" class="d-block w-100" alt="...">
+                <img src="images/caroussel-3.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="images/xmas.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="images/news.png" class="d-block w-100" alt="...">
+                <img src="images/news.jpg" class="d-block w-100" alt="...">
             </div>
             
         </div>
@@ -212,60 +212,46 @@
             <!-- card1 -->
             <div class="row justify-content-center line1" style="margin-left:35px; margin-top: 4rem;">
                 <div class="col-sm-2 col-md-4 ">
-                    <a href="shop.html" target="_blank">
-                        <img class="card-img-top" src="images/Kids.png" alt="Card image cap" style="border-radius: 4%;">
+                    <a href="shop.html#kids" target="_blank">
+                        <img class="card-img-top" src="images/kids.jpg" alt="Kids Bike" style="border-radius: 4%;">
                     </a>
                 </div>
                 <!-- card2 -->
-
                 <div class="col-md-4">
-                    <a href="shop.html" target="_blank">
-                        <img class="card-img-top" src="images/city.png" alt="Card image cap"
+                    <a href="shop.html#city" target="_blank">
+                        <img class="card-img-top" src="images/city.jpg" alt="Card image cap"
                             style="border-radius: 4%; ">
                     </a>
                 </div>
                 <!-- card3-->
                 <div class="col-md-4">
-                    <a href="shop.html" target="_blank">
-
-                        <img class="card-img-top" src="images/cross.png" alt="Card image cap"
+                    <a href="shop.html#cross" target="_blank">
+                        <img class="card-img-top" src="images/cross.jpg" alt="Card image cap"
                             style="border-radius: 4%;">
-
                     </a>
                 </div>
-
-
             </div>
 
             <!-- next card row -->
             <div class="row justify-content-center line2" style="margin-left:35px; margin-top: 20px;">
                 <!-- card4 -->
                 <div class="col-md-4 ">
-                    <a href="shop.html" target="_blank">
-
-                        <img class="card-img-top" src="images/Road.png" alt="Card image cap" style="border-radius: 4%;">
-
+                    <a href="shop.html#road" target="_blank">
+                        <img class="card-img-top" src="images/road.jpg" alt="Card image cap" style="border-radius: 4%;">
                     </a>
                 </div>
                 <!-- card5 -->
                 <div class="col-md-4 ">
-                    <a href="shop.html" target="_blank">
-
-                        <img class="card-img-top" src="images/Folding.png" alt="Card image cap"
+                    <a href="shop.html#folding" target="_blank">
+                        <img class="card-img-top" src="images/folding.jpg" alt="Card image cap"
                             style="border-radius: 4%;">
-
-
                     </a>
                 </div>
                 <!-- card6 -->
-
                 <div class="col-md-4 ">
-                    <a href="shop.html" target="_blank">
-
-
-                        <img class="card-img-top" src="images/E-Bike.png" alt="Card image cap"
+                    <a href="shop.html#ebike" target="_blank">
+                        <img class="card-img-top" src="images/e-bike.jpg" alt="Card image cap"
                             style="border-radius: 4%;">
-
                     </a>
                 </div>
 
